--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -49,8 +49,8 @@ strong {
 }
 
 #ui-toolbar {
-    > .content 84236{
-        position: 84absolute;
+    > .content {
+        position: absolute;
         top: 0;
         left: 0;
         right: 0;
