--- a/editor/sass/theme-dark.scss
+++ b/editor/sass/theme-dark.scss
@@ -57,7 +57,7 @@ a:visited {
 
     &.disabled {
         > header {
-            background-color: mix($bcg-darker, $bcg-primary, $disabled-opacity);
+            background-color: mix($bcg-dark, $bcg-primary, 60);
         }
     }
     &.scrollable {
@@ -1152,3 +1152,6 @@ a:visited {
         }
     }
 }
+
+
+
