read-only: hide most toolbar buttons; allow selecting cameras, hiding custom ones; disable undo/redo; hide hierarchy control buttons

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -68,6 +68,9 @@ strong {
             border: none;
             overflow: hidden;
 
+            &.hidden {
+                display: none;
+            }
             &.logo {
                 background-image: url("https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/images/editor_logo.png");
                 background-size: 92px 46px;
