Show deleted loading screen script as 'missing' in the settings and allow it to be removed

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3901,6 +3901,10 @@ strong {
         }
     }
 
+    .ui-button.script-picker.error {
+        color: #fb222f;
+    }
+
     > .content {
         > .ui-panel > .content {
             padding: 0;
