Improve padding of online users in code editor

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -81,12 +81,13 @@ body {
     position: fixed;
     bottom: 0;
     right: 0;
+    padding: 5px;
     z-index: 1;
     height: $top-bar-height;
     line-height: $top-bar-line-height;
 
     a {
-        margin-right: 5px;
+        margin-left: 5px;
     }
 
     img {
