Added tooltip for launching with local server

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -774,7 +774,7 @@ strong {
         }
     }
 
-    &.launch-facebook {
+    &.launch-tooltip {
         > .inner {
             max-width: 300px;
             line-height: 1.8;
