--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -1239,7 +1239,15 @@ a:visited {
         outline: none;
         border: none;
     }
-    > .preview[src=''], > .preview:not([src]) {
+    > canvas.preview {
+        &.flipY {
+            transform: scale(1, -1);
+            -ms-transform: scale(1, -1);
+            -moz-transform: scale(1, -1);
+            -webkit-transform: scale(1, -1);
+        }
+    }
+    > img.preview[src=''], > img.preview:not([src]) {
         display: none;
     }
     &:after {
