Code editor: Added white icon for connection progress, Only show reconnection error after 5 seconds, Show reconnection icon while reconnecting, Keep reconnecting forever and up to 5 seconds in between instead of 8 reattempts, Make error message more subtle

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -152,14 +152,21 @@ body {
         }
 
         .code-editor-error {
-            background-color: $bright-red;
-            color: $editor-bg;
-            font-size: 14px;
+            color: $bright-red;
+            font-size: 12px;
             @include block();
         }
 
         .code-editor-progress {
             background-color: $muted-green;
+            @include block();
+
+            img {
+                vertical-align: middle;
+            }
+        }
+
+        #connection-progress {
             @include block();
 
             img {
