--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -7,7 +7,7 @@ $editor-text-color: #f8f4f0;
 $editor-gutter-fg: #5b7073;
 $editor-line-highlight: #324447;//#163a43;
 $editor-selection: #677173; //#324447;//#275C69;
-$editor-activeline-bg: transparent;
+$editor-activeline-bg: lighten($editor-bg, 10);
 $editor-activeline-linenumber-bg: lighten($editor-bg, 10);
 $editor-activeline-linenumber: #B1B8BA;
 $editor-tooltip-bg: #324447;
@@ -431,6 +431,7 @@ li.CodeMirror-hint-active {
 
 .CodeMirror-activeline-background {
     background-color: $editor-activeline-bg;
+    opacity: 0.3;
 }
 
 .CodeMirror-activeline-gutter {
