margin left for cursor

--- a/editor/sass/code_editor.scss
+++ b/editor/sass/code_editor.scss
@@ -244,6 +244,7 @@ body {
     .CodeMirror-cursor {
        border-left: 1px solid $editor-text-color !important;
        border-right: 1px solid $editor-text-color !important;
+       margin-left: -1px;
     }
 
     span.cm-comment {
