--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -3135,7 +3135,7 @@ strong {
                 content: '\E299';
             }
             > .icon {
-                display: none;
+                content: '\E299';
             }
         }
 
