--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -25,21 +25,6 @@ strong {
     }
 }
 
-::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
-::-webkit-scrollbar-track {
-    background: $editor-tooltip-bg;
-}
-::-webkit-scrollbar-thumb {
-    background: black;
-}
-::-webkit-scrollbar-corner {
-    background: $editor-tooltip-bg;
-}
-
-
 .noSelect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -69,10 +54,29 @@ strong {
 }
 
 #ui-top {
-    height: 40px;
-    line-height: 40px;
-    border-bottom: 1px solid $border-primary;
-    background-color: $bcg-darker;
+    background-color: mix($bcg-darkest, black, 75%);
+
+    > .content {
+        > .ui-button {
+            background-color: transparent;
+            border-color: transparent;
+            color: $text-secondary;
+            margin: 0;
+            padding: 0 10px;
+            height: 32px;
+            line-height: 32px;
+
+            &:hover {
+                color: $text-primary;
+                background-color: mix($text-darkest, $bcg-darker, 30%);
+            }
+
+            &.open {
+                color: $text-primary;
+                background-color: $bcg-darkest;
+            }
+        }
+    }
 }
 
 #ui-center {
@@ -88,24 +92,116 @@ strong {
 
 #ui-tabs {
     background-color: $bcg-darker;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
+    margin-bottom: 3px;
+    height: 32px;
+
+    .ui-panel.tab {
+        cursor: pointer;
+        @extend .noSelect;
+
+        flex: 1 1 auto;
+        min-width: 10px;
+        max-width: 150px;
+
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+
+        background-color: mix($bcg-darker, $bcg-darkest, 25%);
+        color: $text-secondary;
+
+        padding: 0 30px 0 5px;
+        margin-right: 3px;
+
+        font-size: 13px;
+        white-space: nowrap;
+
+        &:not(.grabbed) {
+            transition: left 200ms;
+            -webkit-transition: left 200ms;
+        }
+
+        &:hover {
+            color: $text-primary;
+        }
+
+        &.focused {
+            background-color: $bcg-darkest;
+            color: $text-primary;
+            border-bottom: 2px solid $text-active;
+            min-width: 100px;
+            z-index: 1;
+        }
+
+        &.dirty {
+            color: transparentize($muted-yellow, 0.15);
+
+            &:hover, &.focused {
+                color: $muted-yellow;
+            }
+        }
+
+        &.grabbed {
+            z-index: 10;
+        }
+
+        > .content {
+            > .ui-panel.name {
+                overflow: hidden;
+            }
+
+            > .close {
+                @extend .font-icon;
+                color: $text-secondary;
+                background-color: transparent;
+                border: 0;
+                position: absolute;
+                padding: 0;
+                margin: 0;
+                top: 3px;
+                right: -25px;
+                font-size: 13px;
+
+                &:hover {
+                    color: $text-active;
+                }
+            }
+
+            > .ui-progress {
+                width: calc(100% + 35px);
+                position: absolute;
+                bottom: -2px;
+                left: -5px;
+            }
+        }
+
+
+    }
 }
 
 #ui-left {
     color: $text-primary;
-    width: 300px;
+    width: 220px;
     > .content {
-        width: 300px;
+        width: 220px;
     }
 }
 
 #ui-bottom {
-    height: 24px;
-    line-height: 24px;
-    background-color: $bcg-darkest;
+    height: 32px;
+    font-size: 14px;
+    line-height: 32px;
+    background-color: mix($bcg-darkest, black, 75%);
     border-top: 1px solid $border-primary;
 
-    .ui-label.status {
+    .ui-label {
         margin: 0 0 0 5px;
+        height: 32px;
+        line-height: 32px;
 
         color: $status-log;
 
@@ -116,260 +212,13 @@ strong {
         &.warning {
             color: $status-warning;
         }
-    }
-}
 
-#editor-container {
-    height: calc(100% - 35px);
-    clear: both;
-}
-
-.ui-panel {
-    background-color: transparent;
-
-    &.resizable {
-        $handle-size: 2px;
-
-        &.resizing > .handle {
-            background-color: transparent;
-        }
-        &.resizable-left {
-            padding-left: 0;
-
-            &.scrollable > .content {
-                left: 0;
-            }
-            > .handle {
-                width: $handle-size;
-                border-left: 3px solid $bcg-darkest;
-            }
-        }
-        &.resizable-right {
-            padding-right: 0;
-
-            > .handle {
-                width: $handle-size;
-                border-right: 3px solid $bcg-darkest;
-            }
-        }
-        &.resizable-top {
-            padding-top: 0;
-
-            &.scrollable > .content {
-                top: 32px;
-            }
-            > .handle {
-                height: $handle-size;
-                border-top: 3px solid $bcg-darkest;
-            }
-        }
-        &.resizable-bottom {
-            padding-bottom: 0;
-
-            > .handle {
-                height: $handle-size;
-                border-bottom: 3px solid $bcg-darkest;
-            }
-        }
-        &.resizing > .handle {
-            opacity: 1;
-        }
-        > .handle {
-            opacity: 0;
-            background-color: transparent;
-
-            &:hover {
-                opacity: 1;
-                background-color: transparent;
-            }
+        &.connection-status {
+            float: right;
+            padding-right: 5px;
         }
     }
-}
 
-.ui-tree.files {
-    width: calc(100% - 5px);
-
-    .ui-tree-item {
-        &.selected {
-            > .title {
-                > .icon {
-                    color: #fff;
-                }
-            }
-        }
-        &.container {
-            > .title {
-                &:hover {
-                    &:before {
-                        color: $text-secondary;
-                    }
-                }
-                &:before {
-                    background-color: mix($text-darkest, $bcg-darker, 30%);
-
-                    &:hover {
-                        background-color: $text-active;
-                    }
-                }
-            }
-
-            &.open {
-                > .title:before {
-                    background-color: mix($text-darkest, $bcg-darker, 30%);
-                }
-            }
-        }
-        > .title {
-            > .text {
-                @extend .font-regular;
-            }
-
-            &:hover {
-                > .icon {
-                    color: #fff;
-                }
-            }
-            > .icon {
-                color: $text-darkest;
-                &:after {
-                    @extend .font-icon;
-                    font-size: 16px;
-                    line-height: 23px;
-                    text-align: center;
-                    background-color: transparent;
-                }
-            }
-        }
-
-        &.type-folder .icon:after {
-            content: '\E139';
-        }
-        &.type-script .icon:after {
-            content: '\E392';
-        }
-        &.type-html .icon:after {
-            content: '\E205';
-        }
-        &.type-css .icon:after {
-            content: '\E206';
-        }
-        &.type-shader .icon:after {
-            content: '\E219';
-        }
-        &.type-text .icon:after {
-            content: '\E209';
-        }
-        &.type-json .icon:after {
-            content: '\E207';
-        }
-
-    }
-}
-
-.ui-tree-item {
-    $line-color: mix($bcg-dark, $bcg-primary, 50%);
-
-    &.container {
-        // plus icon
-        > .title:before {
-            content: '\E120';
-            width: 16px;
-            height: 16px;
-            margin: 3px;
-            @extend .font-icon;
-            font-size: 10px;
-            text-align: center;
-            color: $text-secondary;
-            text-align: center;
-            line-height: 16px;
-            background: transparent;
-            font-weight: bold;
-            background-color: $bcg-dark;
-        }
-        // minus icon
-        &.open {
-            > .title:before {
-                content: '\E121';
-                color: $text-secondary;
-                background-color: $bcg-dark;
-            }
-        }
-    }
-    &.disabled {
-        > .title > .icon:after {
-            background-color: mix($text-darkest, $bcg-primary, 50%);
-            opacity: 1;
-        }
-    }
-    > .title {
-        color: $text-secondary;
-
-        &:hover,
-        &:focus {
-            color: $text-primary;
-            border-color: transparent;
-            background-color: $bcg-dark;
-
-            > .icon:after {
-                background-color: mix($text-darkest, $text-active, 50%);
-            }
-        }
-        > .icon {
-            // line-left
-            &:before {
-                background-color: $line-color;
-                left: -12px;
-                top: 10px;
-                height: 2px;
-            }
-            // icon
-            &:after {
-                background-color: $text-darkest;
-            }
-        }
-    }
-    &.selected {
-        > .title {
-            background-color: $bcg-darkest;
-            color: $text-primary;
-            border-color: transparent;
-
-            > .icon {
-                &:after {
-                    background-color: $text-active;
-                }
-            }
-        }
-    }
-    &.dragged {
-        > .title {
-            background-color: rgba($bcg-dark, .5);
-            color: $text-primary;
-        }
-    }
-    // line-top
-    &:before {
-        background-color: $line-color;
-        width: 2px;
-        left: 14px;
-        top: -12px;
-        bottom: 12px;
-    }
-    // line-top, last item
-    &:last-child {
-        &:before {
-            height: 25px;
-        }
-    }
-    // line-top, single item
-    &.single {
-        &:before {
-            left: 14px;
-            top: -12px;
-            width: 2px;
-            background-color: $line-color;
-        }
-    }
 }
 
 
@@ -393,7 +242,7 @@ strong {
         min-height: 100%;
         width: 61px;
         background-color: $editor-gutter-bg;
-        border-right: none;
+        border-right: 1px solid $border-primary;
     }
 
     .CodeMirror-lines {
