Code editor v2: File panel context menu, changed loading of assets, create assets, fix 'fs' messages in old code editor

--- a/editor/sass/code-editor-v2/theme-dark.scss
+++ b/editor/sass/code-editor-v2/theme-dark.scss
@@ -511,3 +511,12 @@ a:visited {
         background-color: $bcg-dark;
     }
 }
+
+.ui-overlay {
+    > .overlay {
+        background-color: rgba($bcg-darkest, .4);
+    }
+    > .content {
+        background-color: $bcg-primary;
+    }
+}
