--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -262,6 +262,16 @@ strong {
     }
 }
 
+.ui-label.readonly {
+    position: absolute;
+    right: 0;
+    padding: 0px 10px;
+    height: 100%;
+    line-height: 34px;
+    background-color: $bcg-primary;
+    margin: 0;
+}
+
 .picker-confirm {
     z-index: 10000;
 }
@@ -364,6 +374,35 @@ strong {
         }
     }
 }
+
+.picker-script-create.center {
+    > .content {
+        width: 288px;
+        height: auto;
+        left: calc(50% - 144px);
+        top: calc(50% - 32px);
+        padding: 16px;
+        transition: none;
+
+        > .text {
+            display: block;
+            margin-top: 0;
+        }
+        > .ui-text-field {
+            display: block;
+            width: calc(100% - 8px);
+        }
+        > .validate {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            margin: 0;
+            font-size: 12px;
+            color: #f30;
+        }
+    }
+}
+
 
 .cm-s-default {
     &.CodeMirror {
