--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -96,8 +96,11 @@ strong {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
 
-    margin-bottom: 3px;
-    height: 32px;
+    $tab-bottom-margin: 2px;
+
+    height: 32px - $tab-bottom-margin;
+    line-height: 32px - $tab-bottom-margin;
+    margin-bottom: $tab-bottom-margin;
 
     .ui-panel.tab {
         cursor: pointer;
@@ -115,6 +118,9 @@ strong {
         color: $text-secondary;
 
         padding: 0 30px 0 5px;
+        height: 32px - $tab-bottom-margin;
+        line-height: 32px - $tab-bottom-margin;
+
         margin-right: 3px;
 
         font-size: 13px;
@@ -162,7 +168,7 @@ strong {
                 position: absolute;
                 padding: 0;
                 margin: 0;
-                top: 3px;
+                top: 4px;
                 right: -25px;
                 font-size: 13px;
 
